Native/Test/KL/core-74.out
core-74.kl:4:3: error: expression to left of . has no value
