Native/Test/KL/core-74.kl
function noreturnval() {}
operator entry()
{
  noreturnval().nomethod();
}
